--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-webkit-scrollbar{
+  width: 0;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
